--- a/index.html
+++ b/index.html
@@ -99,13 +99,16 @@
             </div>
           </div>
     </header>
-    <main class="bg-slate-100 py-20">
+    <main class="bg-slate-100 py-0">
       <!-- design section -->
-      <section class="px-5 lg:px-32 py-10 lg:py-10   hero-content">
+      <section class="px-5 lg:px-32 py-4 lg:py-10   hero-content">
           <div class="flex flex-col lg:flex-row gap-5 h-[80%]">
             <!-- text -->
-            <div class=" lg:w-1/2 space-y-8 h-[100%]">
-
+            <div class=" lg:relative border lg:w-1/2 space-y-8 h-[100%]">
+                <!-- Extra background image -->
+              <div class="  lg:absolute lg:-top-16 lg:-left-10">
+                <img class=" lg:visible" src="./assets/Vector.png" alt="">
+              </div>
               <div class=" text-center lg:text-left" >
                 <button class="btn rounded-full  bg-white">About us<i class="fa-solid fa-arrow-right "></i></button>
               </div>
@@ -343,7 +346,7 @@
                 <textarea class="w-full h-40 p-3 rounded-2xl" name="" placeholder="Write your message" id=""></textarea>
               </div>
               <div >
-                <button class="btn w-full rounded-full  bg-[#ABEF5F]"> View Details<span class="w-8 h-8 bg-black text-white rounded-full inline-flex justify-center items-center"><i class="fa-solid fa-arrow-right  -rotate-45"></i></span>
+                <button class="btn w-full rounded-full  bg-[#ABEF5F]">Send mail<span class="w-8 h-8 bg-black text-white rounded-full inline-flex justify-center items-center"><i class="fa-solid fa-arrow-right  -rotate-45"></i></span>
                 </button>
               </div>
            </div>
@@ -354,7 +357,22 @@
 
 
     </main>
-    <footer></footer>
+    <footer class="text-center bg-black mx-auto px-5 lg:px-44 py-10 lg:py-30 space-y-5">
+      <div class="">
+        <p class="font-bold text-2xl text-white">Rinterio<span class="w-8 h-8 ml-2 bg-[#ABEF5F] text-black rounded-full inline-flex justify-center items-center"><i class="fa-solid fa-arrow-right  -rotate-45"></i></span></p>
+      </div>
+      <p class="text-gray-500">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+      <nav class="text-gray-400 grid lg:grid-flow-col grid-flow-row gap-4">
+        <a class="link link-hover">Home</a>
+        <a class="link link-hover">Services</a>
+        <a class="link link-hover">Portfolio</a>
+        <a class="link link-hover">Blogs</a>
+        <a class="link link-hover">Contact Us</a>
+      </nav>
+       <div>
+        <button class="btn rounded-full w-full lg:w-[20%]  bg-[#ABEF5F]">Book Consult <span class="w-8 h-8 bg-black text-white rounded-full inline-flex justify-center items-center"><i class="fa-solid fa-arrow-right  -rotate-45"></i></span></button>
+       </div>
+    </footer>
     
 </body>
 </html>
