text error correction

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
             <p class="text-2xl font-bold text-center">My Section<span class="w-10 h-10 ml-2 bg-[#ABEF5F] text-black rounded-full inline-flex justify-center items-center"><i class="fa-solid fa-arrow-right  rotate-90"></i></span></p>
             <h3 class="text-xl text-black font-bold">Why do I create this section?</h3>
 
-            <p class="text-sm text-gray-500"><span class="text-green-500">Answer:</span>I am Md.Imran Sikder.I am a student Computer Science and Engineering(CSE) at University of Barishal.I want to be a <span class="font-bold">creative Web developer</span>.For this reason,I have admited in <span class="text-purple-400 font-bold">Programming Hero</span> course.The moderator of <span class="text-purple-400 font-bold">Programming Hero</span> impart to me a assignment>In this assignment have a special section which will be creative by me.For this reason,I create this section.</p>
+            <p class="text-sm text-gray-500"><span class="text-green-500">Answer:</span>I am Md.Imran Sikder.I am a student Computer Science and Engineering(CSE) at University of Barishal.I want to be a <span class="font-bold">creative Web developer</span>.For this reason,I have admited in <span class="text-purple-400 font-bold">Programming Hero</span> course.The moderator of <span class="text-purple-400 font-bold">Programming Hero</span> impart to me a assignment.In this assignment have a special section which will be creative by me.For this reason,I create this section.</p>
 
              <div class="text-center space-x-2 text-2xl">
               <a href=""><i class="fa-brands fa-facebook"></i></a>
