--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
              </div>
               <div class="text-center lg:w-1/2">
                 <h1 class="text-3xl md:text-5xl font-bold">A barn house of this design has a striking appearance</h1>
-                <p class="py-6 text-xs lg:text-xl">
+                <p class="py-6 text-xs lg:text-xl text-justify">
                   The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.
                 </p>
                 <button class="btn rounded-full  bg-[#ABEF5F]"> View Details<span class="w-8 h-8 bg-black text-white rounded-full inline-flex justify-center items-center"><i class="fa-solid fa-arrow-right  -rotate-45"></i></span></button>
@@ -114,7 +114,7 @@
               </div>
 
               <h1 class="text-3xl font-bold">We design thoughtful, liveable spaces</h1>
-              <p class="py-2">
+              <p class="py-2 text-justify">
                 The barn house captivates with its blend of rustic charm and 
                 modern sophistication, featuring weathered wood, sleek metal accents.
               </p>
@@ -150,7 +150,7 @@
         <div class="text-center w-3/4 mx-auto space-y-2">
             <button class="btn rounded-full  bg-white">How we works<i class="fa-solid fa-arrow-right  "></i></button>
             <h2 class="text-4xl font-bold">Our Works Process</h2>
-            <p>The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            <p class="text-justify">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
 
           </div>
            
@@ -188,7 +188,7 @@
         <div class="text-center w-3/4 mx-auto space-y-2">
           <button class="btn rounded-full  bg-[#ABEF5F33]">Explore our Latest works<i class="fa-solid fa-arrow-right  "></i></button>
           <h2 class="text-4xl font-bold">Our Latest Portfolio</h2>
-          <p>The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+          <p class="text-justify">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
 
         </div>
                 <!-- grid -->
@@ -246,7 +246,7 @@
         <div class="text-center w-3/4 mx-auto space-y-2">
           <button class="btn rounded-full  bg-[#ABEF5F33]">Rinterio News<i class="fa-solid fa-arrow-right  "></i></button>
           <h2 class="text-4xl font-bold text-gray-600">Read Our Articles and News</h2>
-          <p>The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+          <p class="text-justify">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
 
         </div>
       </div>
@@ -314,7 +314,7 @@
             <div class="text-center w-3/4 mx-auto space-y-2">
               <button class="btn rounded-full  bg-[#ABEF5F33]">Rinterio News<i class="fa-solid fa-arrow-right  "></i></button>
               <h2 class="text-4xl font-bold text-gray-600">Read Our Articles and News</h2>
-              <p>The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+              <p class="text-justify">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
             </div>
           </div>
           <!-- input -->
@@ -345,7 +345,7 @@
       <div class="">
         <p class="font-bold text-2xl text-white">Rinterio<span class="w-8 h-8 ml-2 bg-[#ABEF5F] text-black rounded-full inline-flex justify-center items-center"><i class="fa-solid fa-arrow-right  -rotate-45"></i></span></p>
       </div>
-      <p class="text-gray-500">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+      <p class="text-gray-500 text-justify">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
       <nav class="text-gray-400 grid lg:grid-flow-col grid-flow-row gap-4">
         <a class="link link-hover">Home</a>
         <a class="link link-hover">Services</a>
@@ -370,7 +370,7 @@
             <p class="text-2xl font-bold text-center">My Section<span class="w-10 h-10 ml-2 bg-[#ABEF5F] text-black rounded-full inline-flex justify-center items-center"><i class="fa-solid fa-arrow-right  rotate-90"></i></span></p>
             <h3 class="text-xl text-black font-bold">Why do I create this section?</h3>
 
-            <p class="text-sm text-gray-500"><span class="text-green-500">Answer:</span>I am Md.Imran Sikder.I am a student Computer Science and Engineering(CSE) at University of Barishal.I want to be a <span class="font-bold">creative Web developer</span>.For this reason,I have admited in <span class="text-purple-400 font-bold">Programming Hero</span> course.The moderator of <span class="text-purple-400 font-bold">Programming Hero</span> impart to me a assignment.In this assignment have a special section which will be creative by me.For this reason,I create this section.</p>
+            <p class="text-sm text-gray-500 text-justify"><span class="text-green-500">Answer:</span>I am Md.Imran Sikder.I am a student Computer Science and Engineering(CSE) at University of Barishal.I want to be a <span class="font-bold">creative Web developer</span>.For this reason,I have admited in <span class="text-purple-400 font-bold">Programming Hero</span> course.The moderator of <span class="text-purple-400 font-bold">Programming Hero</span> impart to me a assignment.In this assignment have a special section which will be creative by me.For this reason,I create this section.</p>
 
             <div class="text-center space-x-2 text-2xl">
               <a href=""><i class="fa-brands fa-facebook"></i></a>
