grid section imag took width full

--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
                 <!-- grid -->
         <div class="grid lg:grid-cols-12 lg:grid-rows-2 gap-2  ">
           <!-- 1xt grid -->
-          <div class="lg:col-start-1 lg:col-end-9 flex flex-col lg:flex-row p-4 border-2 rounded-xl">
+          <div class="lg:col-start-1 lg:col-end-9 flex flex-col  lg:flex-row p-4 border-2 rounded-xl">
             <!-- image -->
-             <div class="lg:w-[40%]"><img src="./assets/img1.png" alt=""></div>
+             <div class="lg:w-[40%] "><img class="w-full" src="./assets/img1.png" alt=""></div>
               <!-- text -->
              <div class="lg:w-[60%]  p-4">
                   <div class="space-y-1">
@@ -211,16 +211,16 @@
            </div>
            <!-- 2nd grid -->
           <div class="lg:col-start-9 lg:col-end-13 p-4 border-2 rounded-xl">
-            <img src="./assets/img2.png" alt="">
+            <img class="w-full" src="./assets/img2.png" alt="">
           </div>
           <!-- 3rd grid -->
           <div class="lg:col-start-1 lg:col-end-4  p-4 border-2 rounded-xl" >
-            <img class="object-cover" src="./assets/img3.png" alt="">
+            <img class="object-cover w-full" src="./assets/img3.png" alt="">
           </div>
           <!-- 4th grid -->
           <div  class="lg:col-start-4 lg:col-end-10 flex lg:flex-row flex-col border-2 p-4 rounded-xl ">
               <!-- image -->
-             <div class="lg:w-[50%]"><img src="./assets/img4.png" alt=""></div>
+             <div class="lg:w-[50%] w-full"><img class="w-full" src="./assets/img4.png" alt=""></div>
              <!-- text -->
             <div class="lg:w-[50%]  p-4">
                  <div class="space-y-1">
@@ -233,8 +233,9 @@
                  </div>
              </div>
           </div>
+          <!-- grid 5th -->
           <div  class="lg:col-start-10 lg:col-end-13 p-4 border-2 rounded-xl">
-            <img src="./assets/img5.png" alt="">
+            <img class="w-full" src="./assets/img5.png" alt="">
           </div>
            
         </div>
